<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">




        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:text="@string/my_form"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_name"
            android:inputType="text"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Enter the Password"
            android:inputType="textPassword"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/ed_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_the_no"
            android:textColorHint="@color/black" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male" />


            <RadioButton
                android:id="@+id/Female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Female" />

            <TextView
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:text="@string/select_your_intersed_language"
                android:textAlignment="center"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/cbAndroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/cdJava"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Java"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/cdC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/cbKotlin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kotlin"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_your_city"
                android:textAlignment="center"
                android:textSize="25sp" />


            <Spinner
                android:id="@+id/sp_cities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/cities"
                android:padding="12dp" />


        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clickme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#8ACCAA"
            android:text="Click Me"
            android:onClick="getAllValues"/>


    </LinearLayout>


